[feat] Esqueleto de consulta de MAC

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
     </section>
     <section id="conteudo">
         <div class="MAC">
-
+            <div class="macCheck">
+                <input type="text" class="addr" placeholder="insira o MAC para consulta">
+                <button class="searchMac">consultar</button>
+            </div>
+            <div class="infoMac">
+                
+            </div>
         </div>
     </section>
     <footer id=""version></footer>
