--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consulta MAC</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
     <header id="navbar">
@@ -14,23 +15,22 @@
     <section class="bar">
         <div class="container banner">
             <div id="user">
-                <h2>"Bem-vindo, "</h2>
-                <b class="name">Gabriel</b>
-                <p>!</p>
+                <h2>Bem-vindo, <b class="name">Gabriel</b>!</h2>
             </div>
         </div>
     </section>
     <section id="conteudo">
         <div class="MAC">
             <div class="macCheck">
-                <input type="text" class="addr" placeholder="insira o MAC para consulta">
-                <button class="searchMac">consultar</button>
+                <input type="text" id="macAddr" placeholder="insira o MAC para consulta">
+                <button id="searchMac">consultar</button>
             </div>
             <div class="infoMac">
                 
             </div>
         </div>
     </section>
+    <script src="script/consultaMac.js"></script>
     <footer id=""version></footer>
 </body>
 </html>
