--- a/pages/index.html
+++ b/pages/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consulta MAC</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
-    <header>
-        <div class="logo"></div>
+    <header id="navbar">
+        <div class="logo">LOGO</div>
+        <div class="container navbar">MENUS</div>
     </header>
+    <section class="bar">
+        <div class="container banner">
+            <div id="user">
+                <h2>Bem-vindo, <b class="name">Gabriel</b>!</h2>
+            </div>
+        </div>
+    </section>
+    <section id="conteudo">
+        <div class="MAC">
+            <div class="macCheck">
+                <input type="text" id="macAddr" placeholder="insira o MAC para consulta">
+                <button id="searchMac">consultar</button>
+            </div>
+            <div class="infoMac">
+                
+            </div>
+        </div>
+    </section>
+    <script src="script/consultaMac.js"></script>
+    <footer id=""version></footer>
 </body>
 </html>
