--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consulta MAC</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
@@ -30,7 +30,7 @@
             </div>
         </div>
     </section>
-    <script src="script/consultaMac.js"></script>
+    <script src="../src/consultaMac.js"></script>
     <footer id=""version></footer>
 </body>
 </html>
