[chore] Mudança de abordagem para consutla de MAC

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consulta MAC</title>
-    <link rel="stylesheet" href="../style.css">
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="navbar">
@@ -30,7 +29,7 @@
             </div>
         </div>
     </section>
-    <script src="../src/consultaMac.js"></script>
+    <script src="consultaMac.js"></script>
     <footer id=""version></footer>
 </body>
 </html>
